--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
@@ -37,6 +38,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sharp": "^0.28.0",
+    "uuidv4": "^6.2.8",
     "validator": "^13.5.2",
     "xss-clean": "^0.1.1"
   },
