--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 PORT=3000
 LOCAL_URI=mongodb://127.0.0.1:27017/bikeMK
 MONGODB_URI=mongodb+srv://filip:filip123@cluster0.qnfqu.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+TEST_URI=mongodb://127.0.0.1:27017/bikeMK-test
+
 
 #Authntication with JWT
 JWT_SECRET=1234mkbikes5678
