--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
+    "faker": "^5.5.3",
     "firebase-admin": "^9.7.0",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
