--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/tests/user.test.js --timeout 50000",
+    "test": "mocha src/tests/notifications.test.js",
     "dev": "nodemon src/index.js"
   },
   "author": "Filip",
